--- a/package.json
+++ b/package.json
@@ -3,8 +3,16 @@
   "version": "1.0.0",
   "description": "A challenge project to be delivered to ING Poland",
   "main": "index.js",
+  "engines": {
+    "node": "12.19.0",
+    "npm": "6.14.8"
+  },
   "scripts": {
-    "start": "node index.js",
+    "client": "cd client && npm start",
+    "server": "nodemon index.js",
+    "start": "nodemon index.js",
+    "build": "cd client && npm run build",
+    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Rahul Kohli",
@@ -12,9 +20,11 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
-    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
     "express-validators": "^1.0.4"
+  },
+  "devDependencies": {
+    "concurrently": "^6.2.1"
   }
 }
