--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "client": "cd client && npm start",
     "server": "nodemon index.js",
-    "start": "nodemon index.js",
+    "start": "node index.js",
     "build": "cd client && npm run build",
     "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build",
